--- a/ex-boot-web/src/main/resources/application.properties
+++ b/ex-boot-web/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/pos_java
 spring.datasource.username=postgres
 spring.datasource.password=postgresql
 spring.datasource.driverClassName=org.postgresql.Driver
+spring.mvc.view.prefix: /WEB-INF/jsp/
+spring.mvc.view.suffix: .jsp
+
+# HTTP encoding (HttpEncodingProperties)
+spring.http.encoding.charset= UTF-8
+spring.http.encoding.enabled= true
+spring.http.encoding.force= true
